--- a/exerciseApp/package.json
+++ b/exerciseApp/package.json
@@ -12,12 +12,19 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-horizontal-scrolling-menu": "^7.1.3",
+    "react-loading-skeleton": "^3.4.0",
+    "react-lottie": "^1.2.4",
     "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-scroll": "^1.9.0",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
